Передача user_id теперь в запросе
