# docs/swagger.yaml
@@ -81,7 +81,7 @@ paths:
       summary: Delete user
       tags:
         - users
-  /get_user_info:
+  /get_users:
     post:
       consumes:
         - application/json
@@ -119,7 +119,7 @@ paths:
       summary: Get users
       tags:
         - users
-  /get_user_tasks:
+  /get_users_tasks:
     post:
       consumes:
         - application/json
@@ -135,10 +135,9 @@ paths:
           required: true
           type: string
         - description: User id
-          example: '{"id": "1"}'
-          in: body
+          in: query
           name: user_id
-          required: true
+          type: integer
       produces:
         - application/json
       responses:
